--- a/Project1_numerical_methods.ipynb
+++ b/Project1_numerical_methods.ipynb
@@ -48,6 +48,23 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "hello\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"hello\")"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "bQJdpTTE5wOQ"
@@ -431,7 +448,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.2"
+      "version": "3.9.6"
     }
   },
   "nbformat": 4,
